Add forgot password email functionality

--- a/web/WEB-INF/emailtemplates/forgotPassword.html
+++ b/web/WEB-INF/emailtemplates/forgotPassword.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>Notes App</h1>
+        <h2>Forgot Your Password?</h2>
+        <p>
+            Hi {{firstname}} {{lastname}},
+            <br>
+            Here are your credentials to log back into the Notes App.
+            <br>
+            <strong>Email Address:</strong> {{email}}
+            <br>
+            <strong>Password:</strong> {{password}}
+        </p>
     </body>
 </html>
